Bug 630346 - Use basic layers for windows with transparency r=karlt

--HG--
extra : rebase_source : c078915a7455b61e0aff76af3cea735c4342a219